fixed the model of the routes

--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.2",
     "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
