--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.3",
     "path": "^0.12.7",
+    "pdfjs-dist": "^3.4.120",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
