--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.6",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
-    "@react-pdf-viewer/core": "^3.12.0",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.3",
     "path": "^0.12.7",
-    "pdfjs-dist": "^3.4.120",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
@@ -35,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
