--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.3",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
