--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@mui/x-data-grid": "^7.12.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
