--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
+    "docx-preview": "^0.3.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
@@ -31,7 +32,6 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "three": "^0.168.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
