--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "docx-preview": "^0.3.2",
+    "js-cookie": "^3.0.5",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.2",
