--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 VITE_PUBLIC_URL1= "/assets/images"
 VITE_PUBLIC_URLFILE= "/assets/files"
-# VITE_API_URL= "http://localhost:5000/api"
-VITE_API_URL= "http://10.10.4.62:5000/api"
+VITE_API_URL= "http://localhost:5000/api"
+# VITE_API_URL= "http://10.10.4.62:5000/api"
