--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.7",
