--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,5 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/
 JWT_SECRET=PyrmidIsoProject2024
 CorsOptionsOriginPc=http://10.10.4.62:5173
-CorsOptionsOriginLocal=http://localhost:5173
+# CorsOptionsOriginLocal=http://localhost:5173
 
